--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="HandheldFriendly" content="true">
 	<meta name="theme-color" content="#F26B38">
 
-	<title>Happy Birthday | Siddhant Sharma</title>
+	<title>Happy Birthday | ladysapphic</title>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -22,15 +22,15 @@
 	<div id="card">
 		<div id="card-inside">
 			<div class="wrap">
-				<center><p class="animated infinite wobble"><b><u>Happy Birthday Anjali!</b></u></p><center>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco &nbsp;<i class="em-svg em-blush"></i></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+				<center><p class="animated infinite wobble"><b><u>Happy Birthday Cindy!</b></u></p><center>
+				<p> Aujourd'hui tu as enfin 20 ans, tu ne penses pas à quelle vitesse ? Aujourd'hui, j'espère et profite beaucoup de votre journée spéciale, peut-être que je ne peux pas être avec vous mais je veux que vous sachiez que même si je suis à des kilomètres de vous, je serai toujours avec vous même si je ne suis pas physiquement là. &nbsp;<i class="em-svg em-blush"></i></p>
+				<p>Tu mérites le monde entier belle, félicitations ma jolie<3
 				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
 			<div class="wrap">
-				<h1 class="animated infinite swing">Happy Birthday Love</h1>
+				<h1 class="animated infinite swing">Joyeux anniversaire!</h1>
 				<div class="cake_and_velas">
 					<div class="velas">
 						<div class="fuego"></div>
